force-app/main/default/objects/Walkthrough__c/Walkthrough__c.object-meta.xml
<CustomObject>
    <label>Walkthrough</label>
    <nameField>
        <label>Walkthrough Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Walkthroughs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>