force-app/main/default/objects/Walkthrough__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if the walkthrough isn't active, it won't appear in the trial</description>
    <inlineHelpText>if the walkthrough isn't active, it won't appear in the trial</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>