force-app/main/default/objects/Walkthrough__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Path_Activity__c</referenceTo>
    <relationshipLabel>Walkthroughs</relationshipLabel>
    <relationshipName>Walkthroughs</relationshipName>
    <type>Lookup</type>
</CustomField>