force-app/main/default/objects/Walkthrough__c/fields/BodyText__c.field-meta.xml
<CustomField>
    <fullName>BodyText__c</fullName>
    <label>BodyText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>