force-app/main/default/objects/Walkthrough__c/fields/Close_Message__c.field-meta.xml
<CustomField>
    <fullName>Close_Message__c</fullName>
    <description>when the matching message is received, the walkthrough should close itself</description>
    <inlineHelpText>when the matching message is received, the walkthrough should close itself</inlineHelpText>
    <label>Close Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>