force-app/main/default/objects/Walkthrough__c/fields/CSS__c.field-meta.xml
<CustomField>
    <fullName>CSS__c</fullName>
    <defaultValue>"slds-popover,slds-popover_walkthrough,slds-nubbin_left,no-pointer"</defaultValue>
    <description>css that should be applied to the popover.</description>
    <inlineHelpText>css that should be applied to the popover.</inlineHelpText>
    <label>CSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>