force-app/main/default/objects/Walkthrough__c/fields/Manual_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Manual_Grouping__c</fullName>
    <inlineHelpText>use this field to group popovers that don't have a lookup to a path activity</inlineHelpText>
    <label>Manual Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>