force-app/main/default/objects/Walkthrough__c/fields/Next_Button_Action_Override__c.field-meta.xml
<CustomField>
    <fullName>Next_Button_Action_Override__c</fullName>
    <description>will be c.nextCalled if no override is provided</description>
    <label>Next Button Action Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>