force-app/main/default/objects/Walkthrough__c/fields/Next_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Next_Button_Label__c</fullName>
    <defaultValue>"Next"</defaultValue>
    <label>Next Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>