force-app/main/default/objects/Walkthrough__c/fields/OffsetX__c.field-meta.xml
<CustomField>
    <fullName>OffsetX__c</fullName>
    <description>moves the popover to the right (x-axis) this many pixels</description>
    <inlineHelpText>moves the popover to the right (x-axis) this many pixels</inlineHelpText>
    <label>OffsetX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>