force-app/main/default/objects/Walkthrough__c/fields/OffsetY__c.field-meta.xml
<CustomField>
    <fullName>OffsetY__c</fullName>
    <description>moves the popover down (y-axis) this many pixels</description>
    <inlineHelpText>moves the popover down (y-axis) this many pixels</inlineHelpText>
    <label>OffsetY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>