force-app/main/default/objects/Walkthrough__c/fields/Open_on_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Open_on_RecordId__c</fullName>
    <label>Open on RecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>