force-app/main/default/objects/Walkthrough__c/fields/Open_on_URL__c.field-meta.xml
<CustomField>
    <fullName>Open_on_URL__c</fullName>
    <inlineHelpText>open the popover if the current url contains this text</inlineHelpText>
    <label>Open on URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>