force-app/main/default/objects/Walkthrough__c/fields/Selector__c.field-meta.xml
<CustomField>
    <fullName>Selector__c</fullName>
    <description>css selector for the element that the popover should be next to</description>
    <inlineHelpText>css selector for the element that the popover should be next to</inlineHelpText>
    <label>Selector</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>