force-app/main/default/objects/Walkthrough__c/fields/Show_Close_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Close_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Close Button</label>
    <type>Checkbox</type>
</CustomField>