force-app/main/default/objects/Walkthrough__c/fields/Show_Next_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Next_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Next Button</label>
    <type>Checkbox</type>
</CustomField>