force-app/main/default/objects/Walkthrough__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Completed__c</columns>
    <columns>Sequence__c</columns>
    <columns>Header__c</columns>
    <columns>Activity__c</columns>
    <columns>BodyText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>